5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1822_1640.log
== TEST (2019-06-13 11:11:25) 
-- CODE:
from numpy import*
a = array(eval(input("Turmas :")))
b = zeros(n,dtype=int)
i = 0
impar=0
sala=0
for x in a :
	if(x[i]%2!=0):
		impar+=1
		sala+=1
	i+=1
print(sala)
y=0
j=0
for t in a:
	
	

-- ERROR:
File "XXXX", line 18
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:11:38) 
-- CODE:
from numpy import*
a = array(eval(input("Turmas :")))
b = zeros(n,dtype=int)
i = 0
impar=0
sala=0
for x in a :
	if(x[i]%2!=0):
		impar+=1
		sala+=1
	i+=1
print(sala)
y=0
j=0
for t in a:
-- ERROR:
File "XXXX", line 16
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:11:45) 
-- CODE:
from numpy import*
a = array(eval(input("Turmas :")))
b = zeros(n,dtype=int)
i = 0
impar=0
sala=0
for x in a :
	if(x[i]%2!=0):
		impar+=1
		sala+=1
	i+=1
print(sala)
y=0
j=0

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:12:05) 
-- CODE:
from numpy import*
a = array(eval(input("Turmas :")))
#b = zeros(n,dtype=int)
i = 0
impar=0
sala=0
for x in a :
	if(x[i]%2!=0):
		impar+=1
		sala+=1
	i+=1
print(sala)
y=0
j=0

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:12:42) 
-- CODE:
from numpy import*
a = array(eval(input("Turmas :")))
#b = zeros(n,dtype=int)
i = 0
impar=0
sala=0
for x in a :
	if(x[i]%2!=0):
		impar+=1
		sala+=1
		i+=1
print(sala)
y=0
j=0

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:12:53) 
-- CODE:
from numpy import*
a = array(eval(input("Turmas :")))
#b = zeros(n,dtype=int)
i = 0
impar=0
sala=0
for x in a :
	if(x[i]%2 !=0 ):
		impar+=1
		sala+=1
		i+=1
print(sala)
y=0
j=0

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:38:55) 
-- CODE:
from numpy import*
a = array(eval(input("Turmas :")))
#b = zeros(n,dtype=int)
i = 0
impar=0
sala=0
for x in a :
	if(x[i]%2 !=0 ):
		sala+=1
	i+=1
print(sala)
c=0
j=0
b = zeros(n,dtype=int)
for y in a:
	if(y[c]%2 !=0):
		y[c]=n[c]
		c+=1	
	j+=1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:40:21) 
-- CODE:
from numpy import*
a = array(eval(input("Turmas :")))
#b = zeros(n,dtype=int)
i = 0
impar=0
sala=0
for x in range(size(a)) :
	if (x[i]%2 !=0 ):
		sala+=1
	i+=1
print(sala)
c=0
j=0
b = zeros(n,dtype=int)
for y in a:
	if (y[c]%2 !=0):
		y[c]=n[c]
		c+=1	
	j+=1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:42:49) 
-- CODE:
from numpy import*
a = array(eval(input("Turmas :")))
#b = zeros(n,dtype=int)
i = 0
impar=0
sala=0
b = size(a)
#for x in range(size(a)) :
	while(i<b):
	if (a[i]//2 !=0 ):
		sala+=1
	i+=1
print(sala)
c=0
j=0

for y in a:
	if (y[c]%2 !=0):
		y[c]=n[c]
		c+=1	
	j+=1
	

-- ERROR:
File "XXXX", line 9
    while(i<b):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:43:19) 
-- CODE:
from numpy import*
a = array(eval(input("Turmas :")))
#b = zeros(n,dtype=int)
i = 0
impar=0
sala=0
b = size(a)
for x in range(size(a)) :
	if (x[i]//2 !=0 ):
		sala+=1
	i+=1
print(sala)
c=0
j=0

for y in a:
	if (y[c]%2 !=0):
		y[c]=n[c]
		c+=1	
	j+=1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:43:29) 
-- CODE:
from numpy import*
a = array(eval(input("Turmas :")))
#b = zeros(n,dtype=int)
i = 0
impar=0
sala=0
b = size(a)
for x in range(size(a)) :
	if (x[i]//2 !=0 ):
		sala+=1
	i+=1
print(sala)
c=0
j=0

for y in a:
	if (y[c]%2 !=0):
		y[c]=n[c]
		c+=1	
	j+=1
	

-- EXECUTION TIME:
0.755034
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1822/1640/main.py", line 9, in <module>
    if (x[i]//2 !=0 ):
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
